--- a/pom.xml
+++ b/pom.xml
@@ -70,12 +70,12 @@
             <artifactId>aws-java-sdk-dynamodb</artifactId>
             <version>1.12.576</version>
         </dependency>
-
         <dependency>
-            <groupId>com.github.derjust</groupId>
+            <groupId>io.github.boostchicken</groupId>
             <artifactId>spring-data-dynamodb</artifactId>
-            <version>5.1.0</version>
+            <version>5.2.5</version>
         </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
