--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>spring-data-dynamodb</artifactId>
             <version>5.2.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>DynamoDBLocal</artifactId>
+            <version>1.23.0</version>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
