--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-amazon.dynamodb.endpoint=http://localhost:8000/
+amazon.dynamodb.run-locally=true
 amazon.aws.accesskey=key
 amazon.aws.secretkey=key2
